# key-log

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  operations.rs  schema.rs
src-tauri/src/input/: listener.rs  mod.rs
src/assets/styles/: main.css
src/router/: index.ts
src/stores/: stats.ts
src/utils/: api.ts
src/views/: Dashboard.vue  History.vue  Settings.vue
