[package]
name = "key-log"
version = "0.1.0"
description = "A lightweight cross-platform keyboard and mouse statistics tool"
authors = ["you"]
edition = "2021"

[lib]
name = "key_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Keyboard/Mouse listening
rdev = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# Lazy initialization
once_cell = "1"

# System directories
dirs = "5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.6.0"
rust_xlsxwriter = "0.93.0"
